# spikeDetection_py

./: CLAUDE.md
.claude/: settings.local.json
docs/: QT_INTEGRATION.md
spikedetect/: pyproject.toml
spikedetect/src/spikedetect/: models.py
spikedetect/src/spikedetect/gui/: __init__.py  _qt_imports.py  _widgets.py  filter_gui.py  filter_gui_qt.py  spotcheck_gui.py  spotcheck_gui_qt.py  template_gui.py  template_gui_qt.py  threshold_gui.py  threshold_gui_qt.py  workflow.py
spikedetect/src/spikedetect/io/: mat.py
spikedetect/src/spikedetect/pipeline/: detect.py
spikedetect/tests/: test_gui.py  test_models.py  test_pipeline.py
