[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spikedetect"
version = "0.1.0"
description = "Spike detection and sorting for electrophysiology recordings using DTW template matching"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "Arthur Hong"},
]
keywords = ["spike-detection", "electrophysiology", "dtw", "template-matching", "neuroscience"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
]

[project.urls]
Homepage = "https://github.com/maxwellsdm1867/spikeDetection"
Repository = "https://github.com/maxwellsdm1867/spikeDetection"
"Bug Tracker" = "https://github.com/maxwellsdm1867/spikeDetection/issues"
Documentation = "https://github.com/maxwellsdm1867/spikeDetection/tree/master/docs"

[project.optional-dependencies]
fast = [
    "dtaidistance>=2.3",
    "numba>=0.57",
]
io = [
    "pyabf>=2.3",
    "h5py>=3.8",
]
dev = [
    "pytest>=7.3",
    "pytest-cov>=4.0",
    "ruff>=0.1",
]
all = [
    "spikedetect[fast,io,dev]",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
